; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/serial/extr_umct.c_umct_read_callback.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/serial/extr_umct.c_umct_read_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_xfer = type { i32 }
%struct.umct_softc = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.usb_xfer*, i32)* @umct_read_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @umct_read_callback(%struct.usb_xfer* %0, i32 %1) #0 {
  %3 = alloca %struct.usb_xfer*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.umct_softc*, align 8
  store %struct.usb_xfer* %0, %struct.usb_xfer** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.usb_xfer*, %struct.usb_xfer** %3, align 8
  %7 = call %struct.umct_softc* @usbd_xfer_softc(%struct.usb_xfer* %6)
  store %struct.umct_softc* %7, %struct.umct_softc** %5, align 8
  %8 = load %struct.umct_softc*, %struct.umct_softc** %5, align 8
  %9 = getelementptr inbounds %struct.umct_softc, %struct.umct_softc* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %2
  %13 = load %struct.usb_xfer*, %struct.usb_xfer** %3, align 8
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @umct_intr_callback_sub(%struct.usb_xfer* %13, i32 %14)
  br label %20

16:                                               ; preds = %2
  %17 = load %struct.usb_xfer*, %struct.usb_xfer** %3, align 8
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @umct_read_callback_sub(%struct.usb_xfer* %17, i32 %18)
  br label %20

20:                                               ; preds = %16, %12
  ret void
}

declare dso_local %struct.umct_softc* @usbd_xfer_softc(%struct.usb_xfer*) #1

declare dso_local i32 @umct_intr_callback_sub(%struct.usb_xfer*, i32) #1

declare dso_local i32 @umct_read_callback_sub(%struct.usb_xfer*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
